[deploy] vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "name": "your-app-name",
+    "name": "search-service-front",
     "builds": [
       {
         "src": "nuxt.config.js",
