--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.SEARCH_SERVICE_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       # 3000 -> 80 포트로 수행하도록 지정
       - name: Docker run
         run: |
