--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,15 @@
-name: search service CI/CD Docker
+name: CI/CD Docker
 
 # 트리거를 수행할 브랜치를 지정합니다.
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 # 환경설정
 env:
   DOCKER_IMAGE: ghcr.io/${{ github.actor }}/search-service-front
   VERSION: ${{ github.sha }}
-  NAME: search_service_front_cicd
+  NAME: go_cicd
 
 jobs:
   # 빌드 Job
