--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Docker
+name: search_service_front_cicd
 
 # 트리거를 수행할 브랜치를 지정합니다.
 on:
@@ -7,9 +7,9 @@ on:
 
 # 환경설정
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/search-service-front
+  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/search_service_front
   VERSION: ${{ github.sha }}
-  NAME: go_cicd
+  NAME: search_service_front_cicd
 
 jobs:
   # 빌드 Job
@@ -62,4 +62,4 @@ jobs:
       - name: Docker run
         run: |
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:latest
-          docker run -d -p 80:3000 --name go_cicd --restart always ${{ env.DOCKER_IMAGE }}:latest
+          docker run -d -p 80:3000 --name search_service_front_cicd --restart always ${{ env.DOCKER_IMAGE }}:latest
