--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ env:
   VERSION: ${{ github.sha }}
   CONTANIER_NAME1: nuxt-round-robin-deploy1
   CONTANIER_NAME2: nuxt-round-robin-deploy2
-  DOMAIN_NAME: domain or ip
+  DOMAIN_NAME: 52.62.60.164
   NAME: search_service_front_cicd
 
 jobs:
@@ -78,5 +78,18 @@ jobs:
       # front 컨테이너 실행
       - name: Docker run
         run: |
-          docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:latest
-          docker run -d -p 80:3000 --name search_service_front_cicd --restart always ${{ env.DOCKER_IMAGE }}:latest
+          docker ps -q --filter "name=${{ env.CONTANIER_NAME1 }}" | grep -q . && docker stop ${{ env.CONTANIER_NAME1 }} \
+            && docker rm -fv ${{ env.CONTANIER_NAME1 }}
+          docker run -d \
+            -e VIRTUAL_HOST=${{ env.DOMAIN_NAME }} \
+            -e CONTANIER_NAME=${{ env.CONTANIER_NAME1 }} \
+            --name ${{ env.CONTANIER_NAME1 }} \
+            --restart always ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
+          docker ps -q --filter "name=${{ env.CONTANIER_NAME2 }}" | grep -q . && docker stop ${{ env.CONTANIER_NAME2 }} \
+            && docker rm -fv ${{ env.CONTANIER_NAME2 }}
+          docker run -d \
+            -e VIRTUAL_HOST=${{ env.DOMAIN_NAME }} \
+            -e CONTANIER_NAME=${{ env.CONTANIER_NAME2 }} \
+            --name ${{ env.CONTANIER_NAME2 }} \
+            --restart always ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
+          docker image prune -af
