--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
         run: |
           docker pull jwilder/nginx-proxy
           docker run -d --name nginx-proxy --restart always -p 80:80 -p 443:443 \
-            -v /home/ec2-user/vhost.d:/etc/nginx/vhost.d:ro \
+            -v /home/ec2-user:/etc/nginx/vhost.d:ro \
             -v /var/run/docker.sock:/tmp/docker.sock:ro \
             --name nginx-proxy --restart always \
             jwilder/nginx-proxy
