--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ on:
 env:
   DOCKER_IMAGE: ghcr.io/${{ github.actor }}/search_service_front
   VERSION: ${{ github.sha }}
-  CONTANIER_NAME1: nuxt-round-robin-deploy1
-  CONTANIER_NAME2: nuxt-round-robin-deploy2
+  CONTANIER_NAME1: search_service_front1
+  CONTANIER_NAME2: search_service_front2
   DOMAIN_NAME: 52.62.60.164
   NAME: search_service_front_cicd
 
