--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,11 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      # docker-compose file down
+      - name: Download docker-compose file
+        run: |
+          curl -O https://raw.githubusercontent.com/${{ github.repository_owner }}/${{ github.repository }}/${{ github.ref_name }}/docker-compose.yml
+
       # 필요할 경우 기존 nginx-proxy 및 letsencrypt 컨테이너 중지 및 제거
       - name: Stop and remove existing nginx-proxy and letsencrypt containers
         run: |
