--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,19 +61,20 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      # docker-compose file down
-      - name: Download docker-compose file
+      # 필요할 경우 기존 nginx-proxy 컨테이너 중지 및 제거
+      - name: Stop and remove existing nginx-proxy container
         run: |
-          curl -O https://raw.githubusercontent.com/taehyunkim427/search-service-front/main/docker-compose.yml
-      # 필요할 경우 기존 nginx-proxy 및 letsencrypt 컨테이너 중지 및 제거
-      - name: Stop and remove existing nginx-proxy and letsencrypt containers
+          docker stop nginx-proxy || true
+          docker rm nginx-proxy || true
+      # nginx-proxy 컨테이너 실행
+      - name: Run nginx-proxy container
         run: |
-          docker-compose down
-      # nginx-proxy 및 letsencrypt 컨테이너 실행
-      - name: Run nginx-proxy and letsencrypt containers
-        run: |
-          docker network inspect nginx-proxy >/dev/null 2>&1 || docker network create nginx-proxy
-          docker-compose up -d
+          docker pull jwilder/nginx-proxy
+          docker run -d --name nginx-proxy --restart always -p 80:80 -p 443:443 \
+            -v /home/ec2-user:/etc/nginx/vhost.d:ro \
+            -v /var/run/docker.sock:/tmp/docker.sock:ro \
+            --name nginx-proxy --restart always \
+            jwilder/nginx-proxy
       # front 컨테이너 실행
       - name: Docker run
         run: |
@@ -81,8 +82,6 @@ jobs:
             && docker rm -fv ${{ env.CONTANIER_NAME1 }}
           docker run -d \
             -e VIRTUAL_HOST=${{ env.DOMAIN_NAME }} \
-            -e LETSENCRYPT_HOST=${{ env.DOMAIN_NAME }} \
-            -e LETSENCRYPT_EMAIL=thkim427@naver.com \
             -e CONTANIER_NAME=${{ env.CONTANIER_NAME1 }} \
             --name ${{ env.CONTANIER_NAME1 }} \
             --restart always ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
@@ -90,8 +89,6 @@ jobs:
             && docker rm -fv ${{ env.CONTANIER_NAME2 }}
           docker run -d \
             -e VIRTUAL_HOST=${{ env.DOMAIN_NAME }} \
-            -e LETSENCRYPT_HOST=${{ env.DOMAIN_NAME }} \
-            -e LETSENCRYPT_EMAIL=thkim427@naver.com \
             -e CONTANIER_NAME=${{ env.CONTANIER_NAME2 }} \
             --name ${{ env.CONTANIER_NAME2 }} \
             --restart always ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
