--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,12 @@ services:
     image: ${DOCKER_IMAGE}:latest
     container_name: ${CONTANIER_NAME1}
     environment:
-      - VIRTUAL_HOST=${DOMAIN_NAME}
+      - VIRTUAL_HOST=${DOMAIN_NAME}ㅠ
       - LETSENCRYPT_HOST=${DOMAIN_NAME}
       - LETSENCRYPT_EMAIL=thkim427@naver.com
       - CONTANIER_NAME=${CONTANIER_NAME1}
+    networks:
+      - nginx-proxy
     restart: always
 
   search_service_front_2:
@@ -19,4 +21,10 @@ services:
       - LETSENCRYPT_HOST=${DOMAIN_NAME}
       - LETSENCRYPT_EMAIL=thkim427@naver.com
       - CONTANIER_NAME=${CONTANIER_NAME2}
+    networks:
+      - nginx-proxy
     restart: always
+
+networks:
+  nginx-proxy:
+    external: true
