[github runner] docker network connect

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ env:
   CONTANIER_NAME1: search_service_front1
   CONTANIER_NAME2: search_service_front2
   DOMAIN_NAME: searchservice.shop
-  NAME: search_service_front_cicd
+  CUSTOM_NETWORK: search
 
 jobs:
   # 빌드 Job
@@ -67,6 +67,8 @@ jobs:
           docker ps -q --filter "name=${{ env.CONTANIER_NAME1 }}" | grep -q . && docker stop ${{ env.CONTANIER_NAME1 }} \
             && docker rm -fv ${{ env.CONTANIER_NAME1 }}
           docker run -d \
+            --network bridge \
+            --network ${{ env.CUSTOM_NETWORK }} \
             -e VIRTUAL_HOST=${{ env.DOMAIN_NAME }} \
             -e LETSENCRYPT_HOST=${{ env.DOMAIN_NAME }} \
             -e LETSENCRYPT_EMAIL=thkim427@naver.com \
@@ -76,6 +78,8 @@ jobs:
           docker ps -q --filter "name=${{ env.CONTANIER_NAME2 }}" | grep -q . && docker stop ${{ env.CONTANIER_NAME2 }} \
             && docker rm -fv ${{ env.CONTANIER_NAME2 }}
           docker run -d \
+            --network bridge \
+            --network ${{ env.CUSTOM_NETWORK }} \
             -e VIRTUAL_HOST=${{ env.DOMAIN_NAME }} \
             -e LETSENCRYPT_HOST=${{ env.DOMAIN_NAME }} \
             -e LETSENCRYPT_EMAIL=thkim427@naver.com \
