--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
   deploy:
     needs: build  # build 후에 실행되도록 정의
     name: Deploy
-    runs-on: [ self-hosted, label-go ] # AWS ./configure에서 사용할 label명
+    runs-on: [ self-hosted, macOS, ARM64 ] # AWS ./configure에서 사용할 label명
     steps:
       - name: Login to ghcr
         uses: docker/login-action@v1
