[github runner] runson macOS

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
+          platforms: linux/arm64/v8
   # 배포 Job
   deploy:
     needs: build  # build 후에 실행되도록 정의
