--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ env.DOCKER_IMAGE }}:latest
+          tags: ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
           platforms: linux/arm64/v8
   # 배포 Job
   deploy:
@@ -73,7 +73,7 @@ jobs:
             -e LETSENCRYPT_EMAIL=thkim427@naver.com \
             -e CONTANIER_NAME=${{ env.CONTANIER_NAME1 }} \
             --name ${{ env.CONTANIER_NAME1 }} \
-            --restart always ${{ env.DOCKER_IMAGE }}:latest
+            --restart always ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
           docker ps -q --filter "name=${{ env.CONTANIER_NAME2 }}" | grep -q . && docker stop ${{ env.CONTANIER_NAME2 }} \
             && docker rm -fv ${{ env.CONTANIER_NAME2 }}
           docker run -d \
@@ -82,10 +82,4 @@ jobs:
             -e LETSENCRYPT_EMAIL=thkim427@naver.com \
             -e CONTANIER_NAME=${{ env.CONTANIER_NAME2 }} \
             --name ${{ env.CONTANIER_NAME2 }} \
-            --restart always ${{ env.DOCKER_IMAGE }}:latest
-      # Connect custom network
-      - name: Connect network
-        run: |
-          docker network create ${{ env.CUSTOM_NETWORK }} || true
-          docker network connect ${{ env.CUSTOM_NETWORK }} ${{ env.CONTANIER_NAME1 }} || true
-          docker network connect ${{ env.CUSTOM_NETWORK }} ${{ env.CONTANIER_NAME2 }} || true
+            --restart always ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
